Add image and recipe content to khachapuri.html

--- a/recipes/khachapuri.html
+++ b/recipes/khachapuri.html
@@ -7,5 +7,62 @@
 
 <body>
     <h1>Khachapuri</h1>
+    <img src="../images/khachapuri.jpg" alt="khachapuri">
+
+    <h3>Description</h3>
+    <p>
+        Khachapuri, literally "cheese bread" in Georgian, is one of 
+        Georgia's most iconic dishes. Though all varieties are delicious, 
+        we will be making Adjaruli khachapuri, named for the Adjara region, 
+        as its delightful boat shape makes it extra photogenic.
+    </p>
+
+    <h3>Ingredients</h3>
+    <p>Dough</p>
+    <ul>
+        <li>flour</li>
+        <li>yeast</li>
+        <li>water</li>
+        <li>oil</li>
+        <li>salt</li>
+    </ul>
+    <p>Filling</p>
+    <ul>
+        <li>cheese - traditionally, a blend of imeruli and sulguni cheese,
+            but if you're outside of Georgia, you probably won't find 
+            these, so try a blend of feta and mozzarella
+        </li>
+        <li>1 egg yolk</li>
+        <li>butter</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>Make the dough.</li>
+        <li>Roll out a square of dough. Place some shredded cheese, 
+            about half the cheese you have, in two lines along two 
+            opposite edges of the square. 
+        </li>
+        <li>
+            Roll those edges in so that the lines of cheese are 
+            covered, then keep rolling the edges toward each other 
+            until the they meet in the middle. Grab each roll in 
+            the center and gently pull them away from each other 
+            to make a boat shape.
+        </li>
+        <li>
+            Fill the boat with the rest of the cheese. Put it on 
+            a baking sheet and bake in the oven at 425°F for about 
+            12-15 minutes.
+        </li>
+        <li>
+            Take the khachapuri out of the oven, add the egg yolk, 
+            and pop it back in the oven for another minute or two.
+        </li>
+        <li>
+            Remove khachapuri from the oven, top with butter, and 
+            serve.
+        </li>
+    </ol>
 </body>
 </html>
