--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/khachapuri.html">Khachapuri</a>
+    <ul>
+        <li><a href="recipes/khachapuri.html">Khachapuri</a></li>
+        <li><a href="recipes/khinkali.html">Khinkali</a></li>
+    </ul>
 </body>
 </html>
