Add recipe page and image for kharcho

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="recipes/khachapuri.html">Khachapuri</a></li>
         <li><a href="recipes/khinkali.html">Khinkali</a></li>
+        <li><a href="recipes/kharcho.html">Kharcho</a></li>
     </ul>
 </body>
 </html>
