--- a/recipes/khachapuri.html
+++ b/recipes/khachapuri.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Khachapuri</h1>
-    <img src="../images/khachapuri.jpg" alt="khachapuri">
+    <img src="../images/khachapuri.jpg" alt="khachapuri" width="500">
 
     <h3>Description</h3>
     <p>
