--- a/recipes/kharcho.html
+++ b/recipes/kharcho.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Kharcho</h1>
-    <img src="../images/kharcho.jpg" alt="kharcho">
+    <img src="../images/kharcho.jpg" alt="kharcho" width="500">
 
     <h3>Description</h3>
     <p>
