--- a/recipes/khinkali.html
+++ b/recipes/khinkali.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Khinkali</h1>
-    <img src="../images/khinkali.jpg" alt="khinkali">
+    <img src="../images/khinkali.jpg" alt="khinkali" width="500">
 
     <h3>Description</h3>
     <p>
