--- a/recipes/recipe-template.html
+++ b/recipes/recipe-template.html
@@ -7,7 +7,7 @@
 
 <body>
     <h1>Food</h1>
-    <img src="../images/food.jpg" alt="food photo">
+    <img src="../images/food.jpg" alt="food photo" width="500">
 
     <h3>Description</h3>
     <p>
